--- a/index.html
+++ b/index.html
@@ -1,6 +1,44 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<head>
+<title>Life is simple!</title>
+<meta http-equiv="Content-Type" content="text/html;charset=iso-8859-1" />
+<link rel="stylesheet" type="text/css" href="images/style.css" />
+</head>
 <body>
+<div id="sadrzaj">
+  <div id="zaglavlje">
+    <div id="logo"> Life is simple! </div>
+  </div>
+  <div id="lijeva_kolona">
+    <div id="menuheader"></div>
+    <a href="#">Home</a> <a href="#">Support</a> <a href="#">News</a> <a href="#">Affiliates</a> <a href="#">Info</a> <a href="#">Contact</a>
+    <div id="menufooter"></div>
+  </div>
+  <div id="desna_kolona">
+    <h3>Right column article</h3>
+    <div class="text_desno"> Stuff <br />
+      <br />
+    </div>
+    <h3>Another right column article</h3>
+    <div class="text_desno"> Moar Stuff <br />
+      <div id="info"> <a href="http://validator.w3.org/check?uri=referer">Valid XHTML</a> | <a href="http://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a> <br/>
+        Visit <a href="http://www.solucija.com">Solucija</a> or contact us via email. </div>
+    </div>
+  </div>
+  <div class="srednja_kolona">
+    <div class="content_title"><a href="#">Simple webpage</a></div>
+    <div class="text"> Stuff </div>
+  </div>
+  <div class="srednja_kolona">
+    <div class="content_title"><a href="#">Just some Lorem ipsum text</a></div>
+    <div class="text"> More Stuff </div>
+  </div>
+  <div class="srednja_kolona">
+    <div class="content_title"><a href="#">Lorem ipsum strikes back!</a></div>
+    <div class="text"> smore stuff </div>
+  </div>
+</div>
 <h1 Nathan Perfetti>
 <p>This is the personal website of Nate Perfetti!</p>
 </body>
