--- a/index.html
+++ b/index.html
@@ -41,5 +41,9 @@
 </div>
 <h1 Nathan Perfetti>
 <p>This is the personal website of Nate Perfetti!</p>
+<a href="http://smartdatacollective.com?utm_source=badge&utm_medium=banner&utm_campaign=badge" target="_blank"><img src="http://www.smartdatacollective.com/sites/smartdatacollective.com/files/bones-SDC_favicon_1.png" width="" height="40
+" alt="smartdatacollective.com Member"/></a>
+<a href="http://smartdatacollective.com?utm_source=badge&utm_medium=banner&utm_campaign=badge" target="_blank"><img sr width="160" height="40
+" alt="smartdatacollective.com Member"/></a>
 </body>
 </html>
