--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<title>Life is simple!</title>
+<title>Welcome!</title>
 <meta http-equiv="Content-Type" content="text/html;charset=iso-8859-1" />
 <link rel="stylesheet" type="text/css" href="images/style.css" />
 </head>
@@ -45,5 +45,10 @@
 " alt="smartdatacollective.com Member"/></a>
 <a href="http://smartdatacollective.com?utm_source=badge&utm_medium=banner&utm_campaign=badge" target="_blank"><img sr width="160" height="40
 " alt="smartdatacollective.com Member"/></a>
+
+<div class="github-card" data-github="perfettiful" data-width="400" data-height="" data-theme="default"></div>
+<script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
+
+
 </body>
 </html>
