--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html;charset=iso-8859-1" />
 <link rel="stylesheet" type="text/css" href="images/style.css" />
 <link rel="shortcut icon" href="/npLogo.ico" type="image/x-icon">
-<link rel="icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/npLogo.ico" type="image/x-icon">
 </head>
 <body>
 <div id="sadrzaj">
