--- a/index.html
+++ b/index.html
@@ -1,58 +1,78 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-<head>
-<title>Welcome!</title>
-<meta http-equiv="Content-Type" content="text/html;charset=iso-8859-1" />
-<link rel="stylesheet" type="text/css" href="images/style.css" />
-<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-<link rel="icon" href="/favicon.ico" type="image/x-icon">
-</head>
-<body>
-<div id="sadrzaj">
-  <div id="zaglavlje">
-    <div id="logo"> Life is simple! </div>
-  </div>
-  <div id="lijeva_kolona">
-    <div id="menuheader"></div>
-    <a href="#">Home</a> <a href="#">Support</a> <a href="#">News</a> <a href="#">Affiliates</a> <a href="#">Info</a> <a href="#">Contact</a>
-    <div id="menufooter"></div>
-  </div>
-  <div id="desna_kolona">
-    <h3>Right column article</h3>
-    <div class="text_desno"> Stuff <br />
-      <br />
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Perfettiful.GitHub.io by perfettiful</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>Perfettiful.GitHub.io</h1>
+        <p>Personal website of Nathan Perfetti</p>
+
+
+        <p class="view"><a href="https://github.com/perfettiful">View My GitHub Profile</a></p>
+
+      </header>
+      <section>
+        <h1>
+<a id="personal-website-of-nathan-perfetti-" class="anchor" href="#personal-website-of-nathan-perfetti-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Personal website of Nathan Perfetti <a href="https://ghit.me/repo/perfettiful/perfettiful.github.io"><img src="https://ghit.me/badge.svg?repo=perfettiful/perfettiful.github.io" alt="ghit.me"></a>
+</h1>
+
+<p>Personal website of Nathan Perfetti</p>
+
+<h2>
+<a id="installation" class="anchor" href="#installation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation</h2>
+
+<p>TODO: Describe the installation process</p>
+
+<h2>
+<a id="usage" class="anchor" href="#usage" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Usage</h2>
+
+<p>TODO: Write usage instructions</p>
+
+<h2>
+<a id="contributing" class="anchor" href="#contributing" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contributing</h2>
+
+<ol>
+<li>Fork it!</li>
+<li>Create your feature branch: <code>git checkout -b my-new-feature</code>
+</li>
+<li>Commit your changes: <code>git commit -am 'Add some feature'</code>
+</li>
+<li>Push to the branch: <code>git push origin my-new-feature</code>
+</li>
+<li>Submit a pull request :D</li>
+</ol>
+
+<h2>
+<a id="history" class="anchor" href="#history" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>History</h2>
+
+<p>TODO: Write history</p>
+
+<h2>
+<a id="credits" class="anchor" href="#credits" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Credits</h2>
+
+<p>TODO: Write credits</p>
+
+<h2>
+<a id="license" class="anchor" href="#license" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>License</h2>
+
+<p>TODO: Write license</p>
+      </section>
+      <footer>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
     </div>
-    <h3>Another right column article</h3>
-    <div class="text_desno"> Moar Stuff <br />
-      <div id="info"> <a href="http://validator.w3.org/check?uri=referer">Valid XHTML</a> | <a href="http://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a> <br/>
-        Visit <a href="http://www.solucija.com">Solucija</a> or contact us via email. </div>
-    </div>
-  </div>
-  <div class="srednja_kolona">
-    <div class="content_title"><a href="#">Simple webpage</a></div>
-    <div class="text"> Stuff </div>
-  </div>
-  <div class="srednja_kolona">
-    <div class="content_title"><a href="#">Just some Lorem ipsum text</a></div>
-    <div class="text"> More Stuff </div>
-  </div>
-  
-  <div class="github-card" data-github="perfettiful" data-width="400" data-height="" data-theme="default"></div>
-<script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
-
-  <div class="srednja_kolona">
-    <div class="content_title"><a href="#">Lorem ipsum strikes back!</a></div>
-    <div class="text"> smore stuff </div>
-  </div>
-</div>
-<h1 Nathan Perfetti>
-<p>This is the personal website of Nate Perfetti!</p>
-<a href="http://smartdatacollective.com?utm_source=badge&utm_medium=banner&utm_campaign=badge" target="_blank"><img src="http://www.smartdatacollective.com/sites/smartdatacollective.com/files/bones-SDC_favicon_1.png" width="" height="40
-" alt="smartdatacollective.com Member"/></a>
-<a href="http://smartdatacollective.com?utm_source=badge&utm_medium=banner&utm_campaign=badge" target="_blank"><img sr width="160" height="40
-" alt="smartdatacollective.com Member"/></a>
-
-
-
-</body>
+    <script src="javascripts/scale.fix.js"></script>
+    
+  </body>
 </html>
