--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
 
         <p class="view"><a href="https://github.com/perfettiful">View My GitHub Profile</a></p>
+        <div class="github-card" data-github="perfettiful" data-width="400" data-height="317" data-theme="medium"></div>
+        <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
 
       </header>
       <section>
