--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 
 <p>Personal website of Nathan Perfetti</p>
 
+<div class="github-card" data-github="perfettiful" data-width="400" data-height="150" data-theme="default"></div>
+<script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
+
 <h2>
 <a id="installation" class="anchor" href="#installation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation</h2>
 
