--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Perfettiful.GitHub.io</h1>
-        <p>Personal website of Nathan Perfetti</p>
+        <h1>Nathan Perfetti</h1>
+        <p>Personal Info & Career</p>
 
 
         <p class="view"><a href="https://github.com/perfettiful">View My GitHub Profile</a></p>
