--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       <header>
         <h1>Nathan Perfetti</h1>
         <p>Personal Info & Career</p>
+        
+        <link rel="stylesheet" type="text/css" href="http://fcannizzaro.github.io/git-card/lib/git-card.min.css">
+        <script src="http://fcannizzaro.github.io/git-card/git-card/lib/git-card.js"></script>
 
 
         <p class="view"><a href="https://github.com/perfettiful">View My GitHub Profile</a></p>
