--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
         <h1>Nathan Perfetti</h1>
         <p>Personal Info & Career</p>
         
-        <link rel="stylesheet" type="text/css" href="http://fcannizzaro.github.io/git-card/lib/git-card.min.css">
-        <script src="http://fcannizzaro.github.io/git-card/git-card/lib/git-card.js"></script>
+
 
 
         <p class="view"><a href="https://github.com/perfettiful">View My GitHub Profile</a></p>
@@ -33,6 +32,10 @@
 </h1>
 
 <p>Personal website of Nathan Perfetti</p>
+
+        <link rel="stylesheet" type="text/css" href="http://fcannizzaro.github.io/git-card/lib/git-card.min.css">
+        <script src="http://fcannizzaro.github.io/git-card/git-card/lib/git-card.js"></script>
+        <git-card user='perfettiful' repo='BanditsBook'></git-card>
 
 <div class="github-card" data-github="perfettiful" data-width="400" data-height="150" data-theme="default"></div>
 <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
