--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <![endif]-->
   </head>
   <body>
-            <div class="github-card" data-github="perfettiful" data-width="200" data-height="157" data-theme="medium"></div>
-        <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
+    
+<link rel="stylesheet" type="text/css" href="http://fcannizzaro.github.io/git-card/lib/git-card.min.css">
+<script src="http://fcannizzaro.github.io/git-card/git-card/lib/git-card.js"></script>
+
     <div class="wrapper">
       <header>
         <h1>Nathan Perfetti</h1>
