NP adding details

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       <!-- Header Start -->
         <header id="header">
             <div id="logo">
-                <h2>Nathan Perfetti</h2>
-                <h4>"Aspiring Web Developer & Data Analyst"</h4>
+                <h4>Nathan Perfetti</h4><br>
+                <h4>Aspiring Web Developer & Data Analyst</h4>
             </div>
         </header>
         <!-- Header End -->
@@ -63,55 +63,52 @@
                     <section class="clearfix">
                         <div class="g2">
                             <div class="photo">
-                                <img src="https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-frc1/582546_344156198979857_678123957_n.jpg" alt="Sunny Luthra">
+                                <img src="images/profile.jpg" alt="Nathan Perfetti">
                             </div>
                             <div class="info">
-                                <h2>
-                                    Sunny Luthra
-                                </h2>
-                                <h4>
-                                    Animator / Photographer
-                                </h4>
+                                <h2>Nathan Perfetti</h2>
+                                <h4>Aspiring Web Developer & Data Analyst</h4>
                                 <p>
-                                    We are mRova, a Pune-based software development company. We love to develop Websites, Desktop Softwares and Mobile Applications.
+                                    I am an aspiring Data Scientist and Web Developer. I believe strongly in the potential of the Web to share the amazing insight gained from Big Data analysis. I am currently seeking a full-time position as a Business Analyst, Data Analyst, or Front-end Web Developer.
                                 </p>
                             </div>
                         </div>
                         <div class="g1">
                             <div class="main-links sidebar">
                                 <ul>
-                                    <li>
-                                        <a href="#resume">View My Resume</a>
-                                    </li>
-                                    <li>
-                                        <a href="#portfolio">My Portfolio</a>
-                                    </li>
-                                    <li>
-                                        <a href="#contact">Hire me for your next project</a>
-                                    </li>
-                                    <li>
-                                        <a href="#features">Features</a>
-                                    </li>
+                                    <li><a href="#resume">View My Resume</a></li>
+                                    <li><a href="#portfolio">My Portfolio</a></li>
+                                    <li><a href="#contact">Hire me for your next project</a></li>
+                                    <!--<li><a href="#features">Features</a></li>-->
                                 </ul>
                             </div>
                         </div>
                         <div class="break"></div>
                         <div class="contact-info">
+                            <div class="g1">
+                                <div class="item-box clearfix">
+                                    <i class="icon-github"></i>
+                                    <div class="item-data">
+                                        <h3><a href="https://github.com/perfettiful">@perfettiful</a></h3>
+                                        <p>Github Account</p>
+                                    </div>
+                                </div>
+                            </div>
                           <div class="g1">
                             <div class="item-box clearfix">
                               <i class="icon-envelope"></i>
                               <div class="item-data">
-                                <h3><a href="mailto:sunny@mrova.com">sunny@mrova.com</a></h3>
+                                <h3><a href="mailto:nathanperfetti@gmail.com">nathanperfetti@gmail.com</a></h3>
                                 <p>Email Address</p>
                               </div>
                             </div>
                           </div>
                           <div class="g1">
                             <div class="item-box clearfix">
-                              <i class="icon-facebook"></i>
+                              <i class="icon-linkedin"></i>
                               <div class="item-data">
-                                <h3><a href="http://fb.me/luthra.sunny">luthra.sunny</a></h3>
-                                <p>Facebook Profile</p>
+                                <h3><a href="https://www.linkedin.com/in/nathanperfetti?trk=hp-identity-name">Nathan Perfetti</a></h3>
+                                <p>Linkedin Profile</p>
                               </div>
                             </div>
                           </div>
@@ -119,7 +116,7 @@
                             <div class="item-box clearfix">
                               <i class="icon-twitter"></i>
                               <div class="item-data">
-                                <h3><a href="http://twitter.com/mRovaSolutions">@mRovaSolutions</a></h3>
+                                <h3><a href="https://twitter.com/nateperfetti">@nateperfetti</a></h3>
                                 <p>Twitter Handle</p>
                               </div>
                             </div>
@@ -130,6 +127,8 @@
               <!-- End About Tab Data -->
               <!-- Resume Tab Data -->
                 <div id="resume">
+                    <iframe id="pdf" style="border:2px solid #E74C3C" title="Resume PDF" src="NPP_Resume_JUNE16.pdf" frameborder="1" scrolling="auto" height="1100" width="850" ></iframe>
+<!--
                     <section class="clearfix">
                         <div class="g2">
                             <h3>
@@ -255,74 +254,92 @@
                             </div>
                         </div>
                     </section>
+                    -->
                 </div>
               <!-- End Resume Tab Data -->
               <!-- Portfolio Tab Data -->
                 <div id="portfolio">
-                    <section class="clearfix">
-                        <div class="g1">
-                            <div class="image">
-                                <img src="http://lorempixel.com/306/306/sports/1" alt="">
-                                <div class="image-overlay">
-                                    <div class="image-link">
-                                        <a href="http://lorempixel.com/606/606/sports/1" class="btn">Full View</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="g1">
-                            <div class="image">
-                                <img src="http://lorempixel.com/306/306/sports/2" alt="">
-                                <div class="image-overlay">
-                                    <div class="image-link">
-                                        <a href="http://lorempixel.com/606/606/sports/2" class="btn">Full View</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="g1">
-                            <div class="image">
-                                <img src="http://lorempixel.com/306/306/sports/3" alt="">
-                                <div class="image-overlay">
-                                    <div class="image-link">
-                                        <a href="http://lorempixel.com/606/606/sports/3" class="btn">Full View</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="break"></div>
-                        <div class="g1">
-                            <div class="image">
-                                <img src="http://lorempixel.com/306/306/sports/4" alt="">
-                                <div class="image-overlay">
-                                    <div class="image-link">
-                                        <a href="http://lorempixel.com/606/606/sports/4" class="btn">Full View</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="g1">
-                            <div class="image">
-                                <img src="http://lorempixel.com/306/306/sports/5" alt="">
-                                <div class="image-overlay">
-                                    <div class="image-link">
-                                        <a href="http://lorempixel.com/606/606/sports/5" class="btn">Full View</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="g1">
-                            <div class="image">
-                                <img src="http://lorempixel.com/306/306/business/2" alt="">
-                                <div class="image-overlay">
-                                    <div class="image-link">
-                                        <a href="http://lorempixel.com/606/606/business/2" class="btn">Full View</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        
-                    </section>
+
+
+                    <link rel="stylesheet" type="text/css" href="http://fcannizzaro.github.io/git-card/lib/git-card.min.css">
+                    <script src="http://fcannizzaro.github.io/git-card/git-card/lib/git-card.js"></script>
+                    <git-card user='perfettiful' repo='BanditsBook'></git-card>
+
+                    <div class="github-card" data-github="perfettiful" data-width="800" data-height="200" data-theme="default"><a href="https://github.com/perfettiful">View My GitHub Profile</a>
+                        <img src="https://ghit.me/badge.svg?repo=perfettiful/perfettiful.github.io" alt="ghit.me"></div>
+                    <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
+
+                    <script src="javascripts/scale.fix.js"></script>
+
+
+
+                    <!--
+                                        <section class="clearfix">
+                                            <div class="g1">
+                                                <div class="image">
+                                                    <img src="http://lorempixel.com/306/306/sports/1" alt="">
+                                                    <div class="image-overlay">
+                                                        <div class="image-link">
+                                                            <a href="http://lorempixel.com/606/606/sports/1" class="btn">Full View</a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="g1">
+                                                <div class="image">
+                                                    <img src="http://lorempixel.com/306/306/sports/2" alt="">
+                                                    <div class="image-overlay">
+                                                        <div class="image-link">
+                                                            <a href="http://lorempixel.com/606/606/sports/2" class="btn">Full View</a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="g1">
+                                                <div class="image">
+                                                    <img src="http://lorempixel.com/306/306/sports/3" alt="">
+                                                    <div class="image-overlay">
+                                                        <div class="image-link">
+                                                            <a href="http://lorempixel.com/606/606/sports/3" class="btn">Full View</a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="break"></div>
+                                            <div class="g1">
+                                                <div class="image">
+                                                    <img src="http://lorempixel.com/306/306/sports/4" alt="">
+                                                    <div class="image-overlay">
+                                                        <div class="image-link">
+                                                            <a href="http://lorempixel.com/606/606/sports/4" class="btn">Full View</a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="g1">
+                                                <div class="image">
+                                                    <img src="http://lorempixel.com/306/306/sports/5" alt="">
+                                                    <div class="image-overlay">
+                                                        <div class="image-link">
+                                                            <a href="http://lorempixel.com/606/606/sports/5" class="btn">Full View</a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="g1">
+                                                <div class="image">
+                                                    <img src="http://lorempixel.com/306/306/business/2" alt="">
+                                                    <div class="image-overlay">
+                                                        <div class="image-link">
+                                                            <a href="http://lorempixel.com/606/606/business/2" class="btn">Full View</a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                        </section>
+
+                                        -->
                 </div>
               <!-- End Portfolio Data -->
               <!-- Contact Tab Data -->
@@ -334,8 +351,8 @@
                               <i class="icon-globe"></i>
                             </div>
                             <div class="sny-icon-content">
-                              <h4>My Address</h4>
-                              <p>Some Apartment 405 in a jungle nearby a restaurant</p>
+                              <h4>My Location</h4>
+                              <p>I am currently based in the heart of NE MPLS.</p>
                             </div>
                          </div>
                        </div>
@@ -346,7 +363,7 @@
                             </div>
                             <div class="sny-icon-content">
                               <h4>Mobile Number</h4>
-                              <p>999-9999-999<br/>999-1112-999</p>
+                              <p>(612) 999-7537</p>
                             </div>
                          </div>
                        </div>
@@ -357,7 +374,7 @@
                             </div>
                             <div class="sny-icon-content">
                               <h4>About Me</h4>
-                              <p>I love to work, so don't be shy, i am just an email away.</p>
+                              <p>I am a highly motivated thinker and do-er. I consider myself very outgoing and am always willing to meet new people and learn new things! </p>
                             </div>
                          </div>
                        </div>
@@ -370,20 +387,7 @@
         </div>
         <!-- End Tab Container -->
         <footer>
-            <p>
-                Designed with lots of love at <a href="http://www.mrova.com" title="Pune web designing company">mRova</a>. Just <a href="http://www.mrova.com/free-one-page-responsive-html-resume-template/">Click me to download</a> this template for free :).
-            </p>
-            <a href="https://github.com/perfettiful">View My GitHub Profile</a>
-            <img src="https://ghit.me/badge.svg?repo=perfettiful/perfettiful.github.io" alt="ghit.me">
 
-            <link rel="stylesheet" type="text/css" href="http://fcannizzaro.github.io/git-card/lib/git-card.min.css">
-            <script src="http://fcannizzaro.github.io/git-card/git-card/lib/git-card.js"></script>
-            <git-card user='perfettiful' repo='BanditsBook'></git-card>
-
-            <div class="github-card" data-github="perfettiful" data-width="400" data-height="150" data-theme="default"></div>
-            <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
-
-            <script src="javascripts/scale.fix.js"></script>
 
         </footer>
     </div><!-- #main -->
