NP corrected url links

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                                 <div class="item-box clearfix">
                                     <i class="icon-github"></i>
                                     <div class="item-data">
-                                        <h3><a href="https://github.com/perfettiful">@perfettiful</a></h3>
+                                        <h3><a href="https://goo.gl/NkKtHr">@perfettiful</a></h3>
                                         <p>Github Account</p>
                                     </div>
                                 </div>
@@ -107,7 +107,7 @@
                             <div class="item-box clearfix">
                               <i class="icon-linkedin"></i>
                               <div class="item-data">
-                                <h3><a href="https://www.linkedin.com/in/nathanperfetti?trk=hp-identity-name">Nathan Perfetti</a></h3>
+                                <h3><a href="https://goo.gl/6AAZlJ">Nathan Perfetti</a></h3>
                                 <p>Linkedin Profile</p>
                               </div>
                             </div>
