--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               <!-- End About Tab Data -->
               <!-- Resume Tab Data -->
                 <div id="resume">
-                    <iframe id="pdf" style="border:2px solid #E74C3C" title="Resume PDF" src="NPP_Resume_JUNE16.pdf" frameborder="1" scrolling="auto" height="1100" width="850" ></iframe>
+                    <iframe id="pdf" style="border:2px solid #E74C3C" title="Resume PDF" src="NPP_Resume_SEPT16.pdf" frameborder="1" scrolling="auto" height="1100" width="850" ></iframe>
 <!--
                     <section class="clearfix">
                         <div class="g2">
