--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                 <h2>Nathan Perfetti</h2>
                                 <h4>Aspiring Web Developer & Data Analyst</h4>
                                 <p>
-                                    I am an aspiring Data Scientist and Web Developer. I believe strongly in the potential of the Web to share the amazing insight gained from Big Data analysis. I am currently seeking a full-time position as a Business Analyst, Data Analyst, or Front-end Web Developer.
+                                    I believe strongly in the potential of the Web to share the amazing insight gained from Big Data analysis. I am currently seeking a full-time position as a Business Analyst, Data Analyst, or Front-end Web Developer.
                                 </p>
                             </div>
                         </div>
@@ -352,7 +352,7 @@
                             </div>
                             <div class="sny-icon-content">
                               <h4>My Location</h4>
-                              <p>I am currently based in the heart of NE MPLS.</p>
+                              <p>I am currently based in Midtown MPLS.</p>
                             </div>
                          </div>
                        </div>
