--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
         </div>
         <!-- End Tab Container -->
         <footer>
-          <p>&copy; Nathan Perfetti 2017<p>
+          <p>&copy; Nathan Perfetti 2017</p>
 
         </footer>
     </div><!-- #main -->
