--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             </div>
                             <div class="info">
                                 <h2>Nathan Perfetti</h2>
-                                <h4>Aspiring Web Developer & Data Analyst</h4>
+                                <h4>Web Developer & Data Analyst</h4>
                                 <p>
                                     I believe strongly in the potential of the Web to share the amazing insight gained from Big Data analysis. I am currently seeking a full-time position as a Business Analyst, Data Analyst, or Front-end Web Developer.
                                 </p>
