--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <section class="clearfix">
                         <div class="g2">
                             <div class="photo">
-                                <img src="images/DS2_1798-188b2.jpg" alt="Nathan Perfetti">
+                                <img src="DS2_1798-188b2.jpg" alt="Nathan Perfetti">
                             </div>
                             <div class="info">
                                 <h2>Nathan Perfetti</h2>
