--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <header id="header">
             <div id="logo">
                 <h4>Nathan Perfetti</h4><br>
-                <h4>Aspiring Web Developer & Data Analyst</h4>
+                <h4>Web Developer & Data Analyst</h4>
             </div>
         </header>
         <!-- Header End -->
@@ -260,7 +260,7 @@
               <!-- Portfolio Tab Data -->
                 <div id="portfolio">
 
-
+<!-- Git Card
                     <link rel="stylesheet" type="text/css" href="http://fcannizzaro.github.io/git-card/lib/git-card.min.css">
                     <script src="http://fcannizzaro.github.io/git-card/git-card/lib/git-card.js"></script>
                     <git-card user='perfettiful' repo='BanditsBook'></git-card>
@@ -269,7 +269,8 @@
                         <img src="https://ghit.me/badge.svg?repo=perfettiful/perfettiful.github.io" alt="ghit.me"></div>
                     <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
 
-                    <script src="javascripts/scale.fix.js"></script>
+                    <script src="javascripts/scale.fix.js"></script> -->
+                  <ifram src="https://codepen.io/perfettiful/"></iframe>
 
 
 
