--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                     <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
 
                     <script src="javascripts/scale.fix.js"></script> -->
-                  <ifram src="https://codepen.io/perfettiful/"></iframe>
+                  <iframe src="https://codepen.io/perfettiful/"></iframe>
 
 
 
