--- a/index.html
+++ b/index.html
@@ -259,6 +259,12 @@
               <!-- End Resume Tab Data -->
               <!-- Portfolio Tab Data -->
                 <div id="portfolio">
+                  
+                  <p data-height="265" data-theme-id="dark" data-slug-hash="zZwxdJ" data-default-tab="js,result" data-user="perfettiful" data-embed-version="2" data-pen-title="Coding Challenge: Fractal Spirograph" class="codepen">See the Pen <a href="https://codepen.io/perfettiful/pen/zZwxdJ/">Coding Challenge: Fractal Spirograph</a> by Nathan Perfetti (<a href="https://codepen.io/perfettiful">@perfettiful</a>) on <a href="https://codepen.io">CodePen</a>.</p>
+<script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+                  
+                  <p data-height="265" data-theme-id="dark" data-slug-hash="xqeqwm" data-default-tab="js,result" data-user="perfettiful" data-embed-version="2" data-pen-title="Interactive Map - Angular.js" class="codepen">See the Pen <a href="https://codepen.io/perfettiful/pen/xqeqwm/">Interactive Map - Angular.js</a> by Nathan Perfetti (<a href="https://codepen.io/perfettiful">@perfettiful</a>) on <a href="https://codepen.io">CodePen</a>.</p>
+<script async src="https://static.codepen.io/assets/embed/ei.js"></script>
 
 <!-- Git Card
                     <link rel="stylesheet" type="text/css" href="http://fcannizzaro.github.io/git-card/lib/git-card.min.css">
