--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
               <!-- Portfolio Tab Data -->
                 <div id="portfolio">
                   
-                  <iframe width="456" height="940" src="https://codepen.io/perfettiful/" frameborder="0" allowfullscreen></iframe>
+                  <iframe src="https://codepen.io/perfettiful/" frameborder="0" allowfullscreen></iframe>
                   
                   <p data-height="265" data-theme-id="dark" data-slug-hash="OprqKj" data-default-tab="js,result" data-user="perfettiful" data-embed-version="2" data-pen-title="Mandala Anim" class="codepen">See the Pen <a href="https://codepen.io/perfettiful/pen/OprqKj/">Mandala Anim</a> by Nathan Perfetti (<a href="https://codepen.io/perfettiful">@perfettiful</a>) on <a href="https://codepen.io">CodePen</a>.</p>
 <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
