personal desc update

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                             </div>
                             <div class="sny-icon-content">
                               <h4>About Me</h4>
-                              <p>I am a highly motivated thinker and do-er. I consider myself very outgoing and am always willing to meet new people and learn new things! </p>
+                              <p>I am a highly motivated thinker and do-er. I am always willing to meet new people and learn new things! </p>
                             </div>
                          </div>
                        </div>
@@ -400,7 +400,7 @@
         </div>
         <!-- End Tab Container -->
         <footer>
-          <p>&copy; Nathan Perfetti 2017</p>
+          <p>&copy; Nathan Perfetti 2018</p>
 
         </footer>
     </div><!-- #main -->
