Added Codewars badge to profile

--- a/index.html
+++ b/index.html
@@ -120,6 +120,15 @@
                                 <p>Twitter Handle</p>
                               </div>
                             </div>
+                            
+                          <div class="g1">
+                            <div class="item-box clearfix">
+                              <div class="item-data">
+                                <h3><a href="https://www.codewars.com/users/perfettiful/badges/large">Codewars</a></h3>
+                                <img srce = "https://www.codewars.com/users/perfettiful/badges/large">
+                               
+                              </div>
+                            </div>                            
                           </div>
                         </div>
                     </section><!-- content -->
