--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                                 <p>Twitter Handle</p>
                               </div>
                             </div>
-                            
+                          <!--Code Wars Badge
                           <div class="g1">
                             <div class="item-box clearfix">
                               <div class="item-data">
@@ -130,6 +130,7 @@
                               </div>
                             </div>                            
                           </div>
+                                End Codewars badge  -->
                         </div>
                     </section><!-- content -->
                 </div>
