Update portfolio links

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                 <h2>Nathan Perfetti</h2>
                                 <h4>Web Developer & Data Analyst</h4>
                                 <p>
-                                    I believe strongly in the potential of the Web to share the amazing insight gained from Big Data analysis. Iam a certified fullstack developer with a penchant for creative coding. I am currently seeking a full-time position as a Business Analyst, Data Analyst, or Front-end Web Developer.
+                                    I believe strongly in the potential of the Web to share the amazing insight gained from Big Data analysis. I am a certified fullstack webdeveloper with a penchant for creative coding. I am currently seeking a full-time position as a Business Analyst, Data Analyst, or Front-end Web Developer.
                                 </p>
                             </div>
                         </div>
