--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             <ul class='etabs'>
                 <li class='tab' id="tab-about">
                   <a href="#about"><i class="icon-user"></i><span> About Me</span></a></li>
-                <li class='tab'>
-                  <a href="#resume"><i class="icon-file-text"></i><span> Resume</span></a></li>
+                <li class='tab' >
+                  <a href="#resume" "window.open('NPP_Resume_0419.pdf')"><i class="icon-file-text"></i><span> Resume</span></a></li>
                 <li class='tab'>
                   <a href="#portfolio"><i class="icon-heart"></i><span> Portfolio</span></a></li>
                 <li class='tab'>
@@ -78,7 +78,7 @@
                         <div class="g1">
                             <div class="main-links sidebar">
                                 <ul>
-                                    <li><a href="#resume">View My Resume</a></li>
+                                    <li><a href="#resume" onclick="window.open('NPP_Resume_0419.pdf')">View My Resume</a></li>
                                     <li><a href="#portfolio">My Portfolio</a></li>
                                     <li><a href="#contact">Hire me for your next project</a></li>
                                     <!--<li><a href="#features">Features</a></li>-->
@@ -139,7 +139,7 @@
               <!-- End About Tab Data -->
               <!-- Resume Tab Data -->
                 <div id="resume">
-                    <iframe id="pdf" style="border:2px solid #E74C3C" title="Resume PDF" src="NPP_Resume_AUG2018.pdf" frameborder="1" scrolling="auto" height="1100" width="850" ></iframe>
+                    <iframe id="pdf" style="border:2px solid #E74C3C" title="Resume PDF" src="NPP_Resume_0419.pdf" frameborder="1" scrolling="auto" height="1100" width="850" ></iframe>
 <!--
                     <section class="clearfix">
                         <div class="g2">
