--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                 <div class="item-box clearfix">
                                     <i class="icon-github"></i>
                                     <div class="item-data">
-                                        <h3><a href="https://goo.gl/NkKtHr">@perfettiful</a></h3>
+                                        <h3><a href="https://goo.gl/NkKtHr" target="_blank">@perfettiful</a></h3>
                                         <p>Github Account</p>
                                     </div>
                                 </div>
@@ -100,7 +100,7 @@
                             <div class="item-box clearfix">
                               <i class="icon-envelope"></i>
                               <div class="item-data">
-                                <h3><a href="mailto:nathanperfetti@gmail.com">nathanperfetti@gmail.com</a></h3>
+                                <h3><a href="mailto:nathanperfetti@gmail.com" target="_blank">nathanperfetti@gmail.com</a></h3>
                                 <p>Email Address</p>
                               </div>
                             </div>
@@ -109,7 +109,7 @@
                             <div class="item-box clearfix">
                               <i class="icon-linkedin"></i>
                               <div class="item-data">
-                                <h3><a href="https://goo.gl/6AAZlJ">Nathan Perfetti</a></h3>
+                                <h3><a href="https://goo.gl/6AAZlJ" target="_blank">Nathan Perfetti</a></h3>
                                 <p>Linkedin Profile</p>
                               </div>
                             </div>
@@ -118,7 +118,7 @@
                             <div class="item-box clearfix">
                               <i class="icon-twitter"></i>
                               <div class="item-data">
-                                <h3><a href="https://twitter.com/nateperfetti">@nateperfetti</a></h3>
+                                <h3><a href="https://twitter.com/nateperfetti" target="_blank">@nateperfetti</a></h3>
                                 <p>Twitter Handle</p>
                               </div>
                             </div>
@@ -279,24 +279,24 @@
                         <div class="card-body">
                           <h5 class="card-title">Mural Mates</h5>
                           <p class="card-text">Mural Mates is an open-source MERN app that allow users to express their artistic creativity together through collaborative drawing prompts.</p>
-                          <a href="https://muralmates.herokuapp.com/" class="btn btn-primary">Online</a>
-                          <a href="https://github.com/perfettiful/mural-mates" class="btn btn-primary">On Github</a>
+                          <a href="https://muralmates.herokuapp.com/" target="_blank" class="btn btn-primary">Online</a>
+                          <a href="https://github.com/perfettiful/mural-mates" target="_blank" class="btn btn-primary">On Github</a>
                         </div>
                       </div>
                       <div class="card" style="width: 100%; border: orange;s">
                           <div class="card-body">
                             <h5 class="card-title">Haiku You</h5>
                             <p class="card-text">Haiku You is a Node.js app intended to aid users in writing syllable based Japanese poetry.</p>
-                            <a href="https://dazzling-redwood-13072.herokuapp.com/" class="btn btn-primary">Online</a>
-                            <a href="https://github.com/perfettiful/HaikuYou" class="btn btn-primary">On Github</a>
+                            <a href="https://dazzling-redwood-13072.herokuapp.com/" target="_blank" class="btn btn-primary">Online</a>
+                            <a href="https://github.com/perfettiful/HaikuYou" target="_blank" class="btn btn-primary">On Github</a>
                           </div>
                         </div>
                     <div class="card" style="width: 100%; border: orange;">
                         <div class="card-body">
                           <h5 class="card-title">Middle Meetup</h5>
                           <p class="card-text">Middle Meetup is an app that helps people meet each other easier by suggesting places of equidistance. You and your rendezvous contact can select from a range of destination spots that match your shared good taste.</p>
-                          <a href="https://github.com/mchaffin/MiddleMeetUp" class="btn btn-primary">Online</a>
-                          <a href="https://github.com/mchaffin/MiddleMeetUp" class="btn btn-primary">On Github</a>
+                          <a href="https://github.com/mchaffin/MiddleMeetUp" target="_blank" class="btn btn-primary">Online</a>
+                          <a href="https://github.com/mchaffin/MiddleMeetUp" target="_blank" class="btn btn-primary">On Github</a>
                         </div>
                       </div>
 
