--- a/index.html
+++ b/index.html
@@ -442,7 +442,9 @@
         </div>
         <!-- End Tab Container -->
         <footer>
-          <p>&copy; Nathan Perfetti 2018</p>
+          <p>&copy; Nathan Perfetti <script type="text/javascript">
+  document.write(new Date().getFullYear());
+</script></p>
 
         </footer>
     </div><!-- #main -->
