--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <div class="g1">
                             <div class="main-links sidebar">
                                 <ul>
-                                    <li><a href="#resume" onclick="window.open('NPP_Resume_0419.pdf')">View My Resume</a></li>
+                                    <li><a href="#resume" onclick="window.open('NPP_Resume_01_2021 (1).pdf')">View My Resume</a></li>
                                     <li><a href="#portfolio">My Portfolio</a></li>
                                     <li><a href="#contact">Hire me for your next project</a></li>
                                     <!--<li><a href="#features">Features</a></li>-->
@@ -139,7 +139,7 @@
               <!-- End About Tab Data -->
               <!-- Resume Tab Data -->
                 <div id="resume">
-                    <iframe id="pdf" style="border:2px solid #E74C3C" title="Resume PDF" src="NPP_Resume_DEC2019.pdf" frameborder="1" scrolling="auto" height="1100" width="850" ></iframe>
+                    <iframe id="pdf" style="border:2px solid #E74C3C" title="Resume PDF" src="NPP_Resume_01_2021 (1).pdf" frameborder="1" scrolling="auto" height="1100" width="850" ></iframe>
 <!--
                     <section class="clearfix">
                         <div class="g2">
