--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <li class='tab' id="tab-about">
                   <a href="#about"><i class="icon-user"></i><span> About Me</span></a></li>
                 <li class='tab' >
-                  <a href="#resume" "window.open('NPP_Resume_0419.pdf')"><i class="icon-file-text"></i><span> Resume</span></a></li>
+                  <a href="#resume" "window.open('NPP_Resume_01_2021 (1).pdf')"><i class="icon-file-text"></i><span> Resume</span></a></li>
                 <li class='tab'>
                   <a href="#portfolio"><i class="icon-heart"></i><span> Portfolio</span></a></li>
                 <li class='tab'>
