--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <header id="header">
             <div id="logo">
                 <h4>Nathan Perfetti</h4><br>
-                <h4>Web Developer & Data Analyst</h4>
+                <h4>Full Stack Web Developer & Educator</h4>
             </div>
         </header>
         <!-- Header End -->
@@ -69,10 +69,9 @@
                             </div>
                             <div class="info">
                                 <h2>Nathan Perfetti</h2>
-                                <h4>Web Developer & Data Analyst</h4>
+                                <h4>Certified Full Stack Web Developer & Educator </h4>
                                 <p>
-                                    I believe strongly in the potential of the Web to share the amazing insight gained from Big Data analysis. I am a certified fullstack webdeveloper with a penchant for creative coding. I am currently seeking a full-time position as a Business Analyst, Data Analyst, or Front-end Web Developer.
-                                </p>
+                                    I believe strongly in the potential of the Web to share the amazing insight gained from Big Data. I am a certified Full Stack Web Developer with a penchant for creative coding and teaching programming. Feel free to reach out for a collaborator or consultant on your next project.
                             </div>
                         </div>
                         <div class="g1">
@@ -407,7 +406,7 @@
                             </div>
                             <div class="sny-icon-content">
                               <h4>My Location</h4>
-                              <p>I am currently based in Midtown MPLS.</p>
+                              <p>I am currently based in St. Paul, MN.</p>
                             </div>
                          </div>
                        </div>
