--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <!-- Header Start -->
         <header id="header">
             <div id="logo">
-                <h4>Nathan Perfetti</h4><br>
+                <h3 style='color: black; text-shadow: 0 0 5px white'>Nathan Perfetti</h3><br>
                 <h4>Full Stack Web Developer & Educator</h4>
             </div>
         </header>
