--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
       <!-- Header Start -->
         <header id="header">
             <div id="logo">
-                <h3 style='color: black; text-shadow: 0 0 5px white'>Nathan Perfetti</h3><br>
-                <h4>Full Stack Web Developer & Educator</h4>
+                <h2 style='color: black; text-shadow: 0 0 5px white'>Nathan Perfetti</h2><br>
+                <h4 style='color: black; text-shadow: 0 0 5px white'>Full Stack Web Developer & Educator</h4>
             </div>
         </header>
         <!-- Header End -->
