--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
       <!-- Header Start -->
         <header id="header">
             <div id="logo">
-                <h1 style='color: black; text-shadow: 0 0 5px white'>Nathan Perfetti</h1><br>
-                <h2 style='color: black; text-shadow: 0 0 5px white'>Full Stack Web Developer & Educator</h2>
+                <h1 style='color: black; text-shadow: 0 0 8px white'>NATHAN PERFETTI</h1><br>
+                <h3 style='color: black; text-shadow: 0 0 8px white'>Full Stack Web Developer & Educator</h3>
             </div>
         </header>
         <!-- Header End -->
